added sea ice blog post

--- a/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
+++ b/_posts/2021-12-02-apisvsbombus/apis_vs_bombus.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Effects of managed honeybee colonies on bumblebee occurrence in the US"
 description: |
-  The following article details my statistical analysis of honeybee colonies and bumblebee occurrence in the US, using spatial interpolation and simple linear regression. 
+  My statistical analysis of honeybee colonies and bumblebee occurrence in the US, using spatial interpolation and simple linear regression. 
 author:
   - name: Peter Menzies
     url: {}
@@ -10,8 +10,9 @@ output:
   distill::distill_article:
     self_contained: false
 categories: 
+  - Data Science
   - R
-  - "Data Science"
+  - Spatial Analysis
 ---
 
 ```{r setup, echo=FALSE}
