fixed typos in xmas function post

--- a/_posts/2021-08-23-christmas-gift-exchange/christmas-gift-exchange.Rmd
+++ b/_posts/2021-08-23-christmas-gift-exchange/christmas-gift-exchange.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SecRet Santa"
 description: |
-  An R function I built to automate my family's yearly secret santa gift exchange
+  An R function I built to automate my family's secret santa matching process
 author:
   - name: Peter Menzies
     url: {}
