--- a/climbing.Rmd
+++ b/climbing.Rmd
@@ -7,6 +7,11 @@ description: "A little insight into my favorite pastime—pulling on rocks"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+*"The beautiful thing to me about climbing is that you can’t justify it. It doesn’t pretend to be anything useful."*
+\- **Royal Robbins**
+
+<br>
+
 ## Places I've Climbed
 
 Here's an interactive visualization I created of all the places I've climbed over the years. It includes location names, rock types, and the forms of climbing I've done at each spot.
