--- a/index.Rmd
+++ b/index.Rmd
@@ -13,5 +13,5 @@ output:
 site: distill::distill_website
 ---
 
-#### Data scientist,
-#### environmentalist, climber
+#### Data Scientist
+#### Environmentalist
